update waterfall grey charts for contrast + fix y-range issues

--- a/css/index.css
+++ b/css/index.css
@@ -524,7 +524,7 @@ summary:hover{
     fill: #ff7f0e;
 }
 .waterfall-grey{
-    fill: #c7c7c7;
+    fill: #8e8e8e;
 }
 
 
